# wbsellersnotifierbot

./: DEPLOY.md  README.md  pyproject.toml
wbsellersnotifierbot/: .env.example  __main__.py  keyboards.py  settings.py  templates.py
wbsellersnotifierbot/handlers/: __init__.py  button_notifications_status_click.py  check_subscription_on_channel.py  create_conv_handlers.py  delete_message.py  get_all_notifications.py  get_all_users_in_bot.py  get_bot_instruction.py  get_info_for_checking_subscription.py  get_statistics.py  menu_api_keys.py  registration.py  registration_seller.py  response.py  send_message_for_all_users_bot.py  start.py  unpin_all_messages.py  user_menu.py
wbsellersnotifierbot/services/: bot_settings.py  check_user_is_admin.py  digit_separator.py  notifications.py  statistics.py  users.py  wb_keys.py  wildberries.py
wbsellersnotifierbot/templates/: accept_disable_unpin_all_messages.j2  accepting_text_for_sending_msg.j2  bot_instruction.j2  finish_unpinning.j2  get_all_users_in_bot.j2  input_text_for_sending_all_users_bot.j2  main_menu.j2  main_menu_admins.j2  menu_check_subscription.j2  report_after_sending_msg_for_admin.j2  save_subscription_status_seccess.j2  start.j2  start_mailing.j2  start_old_users.j2  unpinning_messages.j2
wbsellersnotifierbot/templates/api_keys_wb/: add_new_api_key.j2  api_key_correct_and_add_to_user_first.j2  checking_api_key.j2  choose_key.j2  deletion_key.j2  key_delition_fail_incorrect_num_key.j2  menu_api_keys.j2  menu_api_keys_empty.j2  request_api_key.j2  request_delete_single_key.j2  set_name_for_key.j2  (+2 more)
(+14 files in other folders)
